--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 tensorflow
 keras
-scikit-learn
+torch
+torchvision
 scipy
 six
 numpy
 Pillow
+opencv-python
+scikit-learn
 matplotlib
 scikit-image
 opencv-python
+imgaug
 imageio
 Shapely
-imgaug
 pandas
+seaborn
 nltk
 tqdm
 joblib
 ipython
 jupyterlab
-jupyter
-torch
-torchvision
